--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -46,10 +46,10 @@ footer {
 
 .copyright {
     padding: 2em;
-    background-color: grey;
+    background-color: #ccef00;
 }
 
 .copyright p {
     text-align: center;
-    color: rgb(45, 45, 45);
+    color: black;
 }
