--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,6 +1,11 @@
 .detail-container {
     display: flex;
     justify-content: space-around;
+    border: 2px solid rgba(0,0,0,.171);
+    border-radius: 20px;
+    width: 90%;
+    margin: 7em auto 0;
+
 }
 
 .detail-img {
