--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,6 +13,10 @@
     width: 80%;
 }
 
+.navbar-link.active {
+    font-weight: bold;
+}
+
 .dropdown-item:focus {
     background-color: black !important;
 }
@@ -24,4 +28,5 @@
 .cart-container {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
