--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@ footer {
 
 .footer-container {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    /* grid-template-columns: repeat(3,1fr); */
     background-color: black;
     color: white;
 }
@@ -52,4 +52,22 @@ footer {
 .copyright p {
     text-align: center;
     color: black;
+}
+
+@media screen and (min-width: 320px) {
+    .footer-section-content {
+        text-align: center;
+    } 
+
+}
+
+@media screen and (min-width: 768px) {
+    
+    .footer-container {
+        grid-template-columns: repeat(3,1fr);
+    }
+    
+    .footer-section-content {
+        text-align: center;
+    }
 }
