--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,15 +1,11 @@
 .detail-container {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
     border: 2px solid rgba(0,0,0,.171);
     border-radius: 20px;
     width: 90%;
     margin: 7em auto 0;
 
-}
-
-.detail-img {
-    width: 30%;
 }
 
 .detail-content {
@@ -28,4 +24,65 @@
 
 .detail-content__price {
     font-size: 1.5em;
+}
+
+@media screen and (min-width: 320px) {
+    .detail-container {
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+
+    .detail-img {
+        width: 90%;
+    }
+
+    .detail-content h2 {
+        font-size: 2em;
+    }
+
+}
+
+@media screen and (min-width: 650px) {
+    .detail-img {
+        width: 70%;
+    }
+
+    .detail-content h2 {
+        font-size: 2.3em;
+    }
+
+    .detail-content p {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .detail-img {
+        width: 60%;
+    }
+
+    .detail-content h2 {
+        font-size: 2.3em;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .detail-container {
+        justify-content: space-around;
+        flex-direction: row;
+    }
+
+    .detail-img {
+        width: 40%;
+    }
+
+    .detail-content h2 {
+        font-size: 2em;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .detail-img {
+        width: 30%;
+    }
 }
