--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,4 +1,27 @@
 .cards-container {
     display: grid;
-    grid-template-areas: "producto producto producto producto";
+}
+
+@media screen and (min-width: 320px) {
+    .cards-container {
+        grid-template-areas: "producto";
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .cards-container {
+        grid-template-areas: "producto producto";
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cards-container {
+        grid-template-areas: "producto producto producto";
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .cards-container {
+        grid-template-areas: "producto producto producto producto";
+    }
 }
