--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 
 .logo-container {
     width: 12%;
-    margin: 0 -5em;
+    /* margin: 0 -5em; */
 }
 
 .logo {
@@ -29,4 +29,30 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+}
+
+@media screen and (min-width: 320px) {
+    .logo-container {
+        width: 32%
+    }
+
+    .navbar-collapse {
+        margin-top: 2em;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .logo-container {
+        width: 22%
+    }
+}
+
+@media screen and (min-width: 991px) {
+    .logo-container {
+        width: 12%
+    }
+
+    .navbar-collapse {
+        margin-top: 0em;
+    }
 }
