--- a/src/components/CartContainer/CartContainer.css
+++ b/src/components/CartContainer/CartContainer.css
@@ -1,4 +1,21 @@
 .cart-title {
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
+}
+
+.cart-noproducts {
+    width: 50%;
+    margin: auto;
+    
+}
+
+.cart-noproducts p {
+    text-align: center;
+    font-size: 2em;
+}
+
+.cart-noproducts button {
+    display: block;
+    margin: auto;
+    margin-top: 3em;
 }
