--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,10 +1,29 @@
 .card {
     grid-area: "producto";
     margin: 0 auto;
+    -webkit-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
+    -moz-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
+    box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
+    overflow: hidden;
 }
 
+.card-img {
+    transition: 0.7s all ease-in-out;
+}
+
+.card:hover .card-img {
+    transform: scale(1.1);
+}
+
+
 .card-name {
+    margin-top: 2em;
     height: 2.5em;
+}
+
+.card-price {
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
 
@@ -13,3 +32,7 @@
     margin: 0 auto;
 }
 
+.card-btn:hover {
+    width: 80%;
+    transition: 0.6s all ease-in-out;
+}
