--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -5,6 +5,9 @@
     border-radius: 20px;
     width: 90%;
     margin: 7em auto 0;
+    -webkit-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
+    -moz-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
+    box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
 
 }
 
