--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -6,21 +6,83 @@
     margin: 1.5em 0;
     border: 2px solid #00000028;
     border-radius: 20px;
-    background-color: white;
-}
-
-.cart-item img {
-    width: 8%;
 }
 
 .cart-item h4 {   
-    width: 30%;
+    /* width: 30%; */
+    margin-bottom: 1.2em 0;
 }
 
 .btn-cart-delete {
     color: red;
-    margin-bottom: 0.3em;
+    margin: 1em 0;
     font-size: 2em;
     cursor: pointer;
 }
 
+@media screen and (min-width: 320px) {
+    .cart-item {
+        flex-direction: column;
+    }
+
+    .cart-item img {
+        width: 65%;
+    }
+
+    .cart-item h4 {   
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .cart-item {
+        flex-direction: column;
+    }
+
+    .cart-item img {
+        width: 50%;
+    }
+
+    .cart-item h4 {   
+        width: 100%;
+        font-size: 1.7em;
+    }
+
+    .cart-item p {
+        font-size: 1.1em;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .cart-item {
+        flex-direction: row;
+    }
+
+    .cart-item img {
+        width: 20%;
+    }
+
+    .cart-item h4 {   
+        width: 30%;
+        font-size: 1.2em;
+    }
+
+    .cart-item p {
+        font-size: 1em;
+    }
+
+    .btn-cart-delete {
+        margin: 1em 0;
+        margin-bottom: 1.3em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cart-item img {
+        width: 8%;
+    }
+
+    .cart-item h4 {   
+        width: 20%;
+    }
+}
