--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -13,7 +13,6 @@
 
 .detail-content {
     text-align: center;
-    width: 50%;
 }
 
 .detail-content h2 {
@@ -29,11 +28,18 @@
     font-size: 1.5em;
 }
 
+.detail-options {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+}
+
 @media screen and (min-width: 320px) {
     .detail-container {
         justify-content: flex-end;
         flex-direction: column;
     }
+    
 
     .detail-img {
         width: 90%;
@@ -41,6 +47,10 @@
 
     .detail-content h2 {
         font-size: 2em;
+    }
+
+    .detail-options {
+        width: 100%;
     }
 
 }
@@ -73,6 +83,10 @@
     .detail-container {
         justify-content: space-around;
         flex-direction: row;
+    }
+
+    .detail-content {
+        width: 50%;
     }
 
     .detail-img {
