--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,19 +1,13 @@
 form {
-    /* background-color: red; */
     width: 60%;
     margin: 0 auto;
     padding: 1em 0;
     -webkit-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
     -moz-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
     box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
-    /* display: flex; */
-    /* justify-content: center;
-    align-items: center;
-    flex-direction: column; */
 }
 
 .form-section {
-    /* background-color: yellow; */
     width: 60%;
     margin: 2em auto;
 }
@@ -32,9 +26,14 @@ form {
 }
 
 .form-section input:focus  {
-    background-color: #ddd;
+    background-color: #dddddd74;
     transition: 0.5s;
     
+}
+
+.form-section span {
+    font-size: 1.4em;
+    margin-left: 0.2em
 }
 
 form button {
