--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,5 +1,4 @@
 form {
-    width: 60%;
     margin: 0 auto;
     padding: 1em 0;
     -webkit-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
@@ -8,14 +7,12 @@ form {
 }
 
 .form-section {
-    width: 60%;
     margin: 2em auto;
 }
 
 .form-section label,
 .form-section input {
     display: inline-block;
-    width: 90%;
 }
 
 .form-section input {
@@ -28,7 +25,6 @@ form {
 .form-section input:focus  {
     background-color: #dddddd74;
     transition: 0.5s;
-    
 }
 
 .form-section span {
@@ -37,7 +33,7 @@ form {
 }
 
 form button {
-    margin: 0 auto;
+    margin: 0 auto 1em;
     width: 20%;
     background-color: #ccef00 !important;
     border: none !important;
@@ -46,4 +42,72 @@ form button {
 form button:hover {
     border: none !important;
     background-color:#96bc00 !important;
+}
+
+@media screen and (min-width: 320px) {
+    form {
+        width: 90%;
+    }
+
+    .form-section {
+        width: 90%;
+    }
+
+    .form-section label,
+    .form-section input {
+        width: 85%;
+    }
+
+    form button {
+        width: 90%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    form {
+        width: 90%;
+    }
+
+    .form-section label,
+    .form-section input {
+        width: 90%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    form {
+        width: 70%;
+    }
+
+    .form-section {
+        width: 80%;
+    }
+
+    .form-section label,
+    .form-section input {
+        width: 90%;
+    }
+
+    form button {
+        width: 40%;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    form {
+        width: 60%;
+    }
+
+    .form-section {
+        width: 80%;
+    }
+
+    .form-section label,
+    .form-section input {
+        width: 95%;
+    }
+
+    form button {
+        width: 20%;
+    }
 }
