--- a/src/components/UserOrder/UserOrder.css
+++ b/src/components/UserOrder/UserOrder.css
@@ -1,20 +1,20 @@
 .order-container {
-    width: 50%;
     margin: 0 auto;
-    text-align: center;
     padding: 4em 0;
     -webkit-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
     -moz-box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
     box-shadow: -0.5px 2.5px 8.5px 7.5px #ddd;
 }
 
-.order-title {
-    font-size: 3em;
-    margin-bottom: 1em;
+.order-title,
+.order-code,
+.order-info {
+    text-align: center;
 }
 
-.order-code {
-    font-size: 1.5em;
+
+.order-title {
+    margin-bottom: 1.5em;
 }
 
 .order-info {
@@ -25,4 +25,44 @@
 .order-buyer {
     margin: 0 auto;
     padding: 1em 2em;
+}
+
+@media screen and (min-width: 320px) {
+    .order-container {
+        width: 90%;
+    }
+    
+    .order-title {
+        font-size: 2em;
+    }
+
+    .order-code {
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (min-width: 768px) {   
+    .order-title {
+        font-size: 3em;
+    }
+
+    .order-code {
+        font-size: 1.5em;
+    }
+
+    .order-buyer {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .order-container {
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .order-container {
+        width: 50%;
+    }
 }
