--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -29,18 +29,28 @@ footer {
     color: white;
 }
 
+.footer-links {
+    cursor: pointer;
+}
+
 .footer-contact i {
     margin-right: 0.6em;
 }
 
-.social-container {
+.footer-social {
     display: flex;
     justify-content: center;
 }
 
-.social-container a {
+.footer-social a {
     font-size: 2.2em;
     margin: 0 0.6em;
+}
+
+.footer-social a:hover {
+    color: white;
+    transition: 1s;
+    transform: scale(1.2);
 }
 
 .copyright {
